[gd_scene load_steps=14 format=3 uid="uid://dutkgxe02gaky"]

[ext_resource type="Script" uid="uid://ciw86p8f4twym" path="res://autoload/rolln_around/level/objects/spring/spring.gd" id="1_5wq0k"]
[ext_resource type="ArrayMesh" uid="uid://bwa67hhxbxmfi" path="res://autoload/rolln_around/level/objects/spring/res/mesh/spring_top_Sphere.res" id="2_dy6j8"]
[ext_resource type="Shader" uid="uid://dlj6ybchxulv8" path="res://res/materials/basic_unshaded_texture.gdshader" id="3_dr750"]
[ext_resource type="ArrayMesh" uid="uid://m5w18jwshoqd" path="res://autoload/rolln_around/level/objects/spring/res/mesh/spring_wire_Wire.res" id="3_vtj5i"]
[ext_resource type="ArrayMesh" uid="uid://c3ngvm0npoyrh" path="res://autoload/rolln_around/level/objects/spring/res/mesh/spring_bottom_Sphere_001.res" id="4_8fj72"]
[ext_resource type="Texture2D" uid="uid://g8v8k8foy7xg" path="res://autoload/rolln_around/level/objects/spring/res/glb/spring_top.png" id="4_vioc4"]
[ext_resource type="Texture2D" uid="uid://txcv64b57wxs" path="res://autoload/rolln_around/level/objects/spring/res/glb/spring_wire.png" id="6_v35et"]
[ext_resource type="Texture2D" uid="uid://cxnxcr0467hrm" path="res://autoload/rolln_around/level/objects/spring/res/glb/spring_bottom.png" id="8_elamx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_55iqn"]
render_priority = 0
shader = ExtResource("3_dr750")
shader_parameter/texture_image = ExtResource("4_vioc4")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wkx8c"]
height = 0.2
radius = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cxno8"]
render_priority = 0
shader = ExtResource("3_dr750")
shader_parameter/texture_image = ExtResource("6_v35et")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8gsd5"]
render_priority = 0
shader = ExtResource("3_dr750")
shader_parameter/texture_image = ExtResource("8_elamx")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_w6ml7"]
height = 0.2
radius = 0.85

[node name="Spring" type="Node3D"]
script = ExtResource("1_5wq0k")

[node name="Top" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Top" type="MeshInstance3D" parent="Top"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
mesh = ExtResource("2_dy6j8")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_55iqn")

[node name="ShadowAnimatableBody" type="AnimatableBody3D" parent="Top"]
unique_name_in_owner = true
collision_layer = 2147483648
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Top/ShadowAnimatableBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("CylinderShape3D_wkx8c")

[node name="Wire" type="Node3D" parent="."]

[node name="Wire" type="MeshInstance3D" parent="Wire"]
mesh = ExtResource("3_vtj5i")
skeleton = NodePath("")
blend_shapes/Extended = 1.0
surface_material_override/0 = SubResource("ShaderMaterial_cxno8")

[node name="Bottom" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0794045, 0)

[node name="Bottom" type="MeshInstance3D" parent="Bottom"]
mesh = ExtResource("4_8fj72")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_8gsd5")

[node name="DetectionArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 3
collision_mask = 3
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("CylinderShape3D_w6ml7")

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_shape_entered" from="DetectionArea" to="." method="_on_area_3d_body_shape_entered"]
